# StarryOS-With-RKNPU

./: .gitattributes  .gitmodules  Cargo.toml  Makefile
api/: Cargo.toml
api/src/: exception.rs  task.rs
api/src/bpf/: map.rs  mod.rs  tansform.rs
api/src/file/: mod.rs  signalfd.rs
api/src/kprobe/: kprobe_test.rs  mod.rs
api/src/perf/: bpf.rs  kprobe.rs  mod.rs  raw_tracepoint.rs  tracepoint.rs
api/src/syscall/: mod.rs
api/src/syscall/fs/: ctl.rs  mod.rs  signalfd.rs
api/src/syscall/mm/: mmap.rs
api/src/syscall/sync/: mod.rs  rseq.rs
api/src/syscall/task/: clone.rs  execve.rs  schedule.rs  thread.rs
api/src/terminal/: ldisc.rs
api/src/vfs/dev/: card0.rs  card1.rs  dma_heap.rs  drm.rs  fb.rs  loop.rs  mod.rs
api/src/vfs/sys/: mod.rs
core/: Cargo.toml
core/src/: task.rs
core/src/config/: aarch64.rs
core/src/vfs/: dev.rs
crates/axcpu/: CHANGELOG.md  Cargo.toml  README.md
crates/axcpu/.github/workflows/: ci.yml
crates/axcpu/src/: lib.rs  trap.rs
crates/axcpu/src/aarch64/: asm.rs  context.rs  init.rs  mod.rs  trap.S  trap.rs  user_copy.S  uspace.rs
crates/axcpu/src/loongarch64/: asm.rs  context.rs  init.rs  macros.rs  mod.rs  trap.S  trap.rs  unaligned.S  unaligned.rs  user_copy.S  uspace.rs
crates/axcpu/src/riscv/: asm.rs  context.rs  init.rs  macros.rs  mod.rs  trap.S  trap.rs  user_copy.S  uspace.rs
crates/axcpu/src/x86_64/: asm.rs  context.rs  gdt.rs  idt.rs  init.rs  mod.rs  syscall.rs  trap.rs  uspace.rs
crates/axdriver-dyn/: Cargo.toml
crates/axdriver-dyn/src/: lib.rs
crates/axdriver-dyn/src/blk/: rockchip.rs
crates/axdriver-dyn/src/rknpu/: mod.rs
crates/axdriver-dyn/src/serial/: mod.rs
crates/axdriver-dyn/src/soc/: mod.rs
crates/axdriver-dyn/src/soc/rockchip/: clk.rs  mod.rs  pm.rs
crates/axdriver_crates/: Cargo.toml  README.md
crates/axdriver_crates/.github/workflows/: ci.yml
crates/axdriver_crates/axdriver_base/: Cargo.toml
crates/axdriver_crates/axdriver_base/src/: lib.rs
crates/axdriver_crates/axdriver_block/: Cargo.toml
crates/axdriver_crates/axdriver_block/src/: bcm2835sdhci.rs  gpt.rs  lib.rs  ramdisk.rs  sdmmc.rs
crates/axdriver_crates/axdriver_display/: Cargo.toml
crates/axdriver_crates/axdriver_display/src/: lib.rs
crates/axdriver_crates/axdriver_input/: Cargo.toml
crates/axdriver_crates/axdriver_input/src/: lib.rs
crates/axdriver_crates/axdriver_net/: Cargo.toml
crates/axdriver_crates/axdriver_net/src/: fxmac.rs  ixgbe.rs  lib.rs  net_buf.rs
crates/axdriver_crates/axdriver_pci/: Cargo.toml
crates/axdriver_crates/axdriver_pci/src/: lib.rs
crates/axdriver_crates/axdriver_virtio/: Cargo.toml
crates/axdriver_crates/axdriver_virtio/src/: blk.rs  dummy.rs  gpu.rs  input.rs  lib.rs  net.rs
crates/axplat-aarch64-dyn/: Cargo.toml  README.md  axconfig-hv.toml  axconfig.toml  build.rs  link.ld  rust-toolchain.toml
crates/axplat-aarch64-dyn/src/: boot.rs  console.rs  driver.rs  fdt.rs  init.rs  lib.rs  mem.rs  power.rs  smp.rs  time.rs
crates/axplat-aarch64-dyn/src/irq/: mod.rs  v2.rs  v3.rs
src/: entry.rs  main.rs
user/musl/: Makefile
user/musl/kret/: Cargo.toml  README.md
user/musl/kret/kret/: Cargo.toml  build.rs
user/musl/kret/kret-common/: Cargo.toml
user/musl/kret/kret-ebpf/: Cargo.toml
user/musl/kret/kret-ebpf/src/: main.rs
user/musl/kret/kret/src/: main.rs
user/musl/mytrace/: Cargo.toml  README.md
user/musl/mytrace/mytrace/: Cargo.toml  build.rs
user/musl/mytrace/mytrace-common/: Cargo.toml
user/musl/mytrace/mytrace-ebpf/: Cargo.toml
user/musl/mytrace/mytrace-ebpf/src/: main.rs
user/musl/mytrace/mytrace/src/: main.rs
user/musl/rawtp/: Cargo.toml  README.md
user/musl/rawtp/rawtp/: Cargo.toml  build.rs
user/musl/rawtp/rawtp-common/: Cargo.toml
user/musl/rawtp/rawtp-ebpf/: Cargo.toml
user/musl/rawtp/rawtp-ebpf/src/: main.rs
user/musl/rawtp/rawtp/src/: main.rs
user/musl/syscall_ebpf/: Cargo.toml  README.md
user/musl/syscall_ebpf/syscall_ebpf/: Cargo.toml  build.rs
user/musl/syscall_ebpf/syscall_ebpf-common/: Cargo.toml
user/musl/syscall_ebpf/syscall_ebpf-ebpf/: Cargo.toml
user/musl/syscall_ebpf/syscall_ebpf-ebpf/src/: main.rs
user/musl/syscall_ebpf/syscall_ebpf/src/: main.rs
