[workspace]
resolver = "2"
members = ["api", "core", "user/musl/async_test"]
exclude = ["arceos"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Azure-stars <Azure_stars@126.com>",
    "Yuekai Jia <equation618@gmail.com>",
]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/starry-next"

[workspace.dependencies]
axfeat = { path = "arceos/api/axfeat", features = [
    "alloc-slab",
    "fp-simd",
    "ext4",
    "fs",
    "irq",
    "multitask",
    "net",
    "page-alloc-4g",
    "rtc",
    # "sched-fifo",
    "sched-rr",
] }

axalloc = { path = "arceos/modules/axalloc" }
axconfig = { path = "arceos/modules/axconfig" }
axdisplay = { path = "arceos/modules/axdisplay" }
axdriver = { path = "arceos/modules/axdriver" }
axfs-ng = { path = "arceos/modules/axfs-ng" }
axhal = { path = "arceos/modules/axhal", features = ["uspace"] }
axinput = { path = "arceos/modules/axinput" }
axlog = { path = "arceos/modules/axlog" }
axmm = { path = "arceos/modules/axmm" }
axnet = { path = "arceos/modules/axnet" }
axruntime = { path = "arceos/modules/axruntime" }
axsync = { path = "arceos/modules/axsync" }
axtask = { path = "arceos/modules/axtask", features = ["task-ext"] }
ksym = { git = "https://github.com/Starry-OS/ksym", rev = "8fa0df1" }
kprobe = { git = "https://github.com/Starry-OS/kprobe", rev = "318cbb2" }
axcpu = { git = "https://github.com/Starry-OS/axcpu", rev = "94aa1bd", features = [
    "kprobe",
] }
lazyinit = "0.2"

axbacktrace = "0.1"
axerrno = "0.1"
axfs-ng-vfs = { git = "https://github.com/Starry-OS/axfs-ng-vfs.git", rev = "e3e83d6" }
axio = "0.1"
starry-process = "0.2"
starry-signal = "0.2"
starry-vm = "0.1"

bitflags = "2.6"
bytemuck = { version = "1.23", features = ["unsound_ptr_pod_impl"] }
cfg-if = "1.0"
event-listener = { version = "5.4.0", default-features = false }
extern-trait = "0.2"
hashbrown = "0.15.4"
kspin = "0.1"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linkme = "0.3.33"
linux-raw-sys = { version = "0.9.3", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }
memory_addr = "0.4"
scope-local = "0.1"
slab = { version = "0.4.9", default-features = false }
spin = "0.9"
starry-core = { path = "./core" }
starry-api = { path = "./api" }
lock_api = { version = "0.4", default-features = false }
kernel_guard = "0.1"

[package]
name = "starry"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
qemu = [
    "axfeat/driver-virtio-blk",
    "axfeat/driver-virtio-net",

    "axfeat/driver-virtio-gpu",
    "axfeat/display",

    "axfeat/driver-virtio-input",
    "axfeat/input",
    # "axdriver/dyn",
    "starry-api/input",

    "axfeat/defplat",

    # auxilary features
    "axfeat/fs-times",
    "starry-api/dev-log",
]
vf2 = ["dep:axplat-riscv64-visionfive2", "axfeat/driver-sdmmc-gpt"]
2k1000la = ["dep:axplat-loongarch64-2k1000la", "axfeat/driver-ahci-gpt"]

# Stubs
pci = ["axfeat/bus-pci"]
mmio = ["axfeat/bus-mmio"]

[dependencies]
axfeat.workspace = true

axdriver.workspace = true
axfs-ng.workspace = true
axhal.workspace = true
axlog.workspace = true
axruntime.workspace = true
axsync.workspace = true
axtask.workspace = true

starry-core.workspace = true
starry-api.workspace = true

axerrno.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
starry-process.workspace = true
starry-signal.workspace = true

[dependencies.axplat-riscv64-visionfive2]
git = "https://github.com/Starry-OS/axplat-riscv64-visionfive2.git"
rev = "a4f99aa"
features = ["fp-simd", "irq", "rtc"]
optional = true

[dependencies.axplat-loongarch64-2k1000la]
git = "https://github.com/Starry-OS/axplat-loongarch64-2k1000la.git"
rev = "b9b10d7"
features = ["fp-simd", "irq", "rtc"]
optional = true

[patch.crates-io]
axbacktrace = { git = "https://github.com/Starry-OS/axbacktrace.git", rev = "09c22b6" }
axcpu = { git = "https://github.com/Starry-OS/axcpu.git", rev = "94aa1bd" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git", rev = "58be232" }
axio = { git = "https://github.com/Starry-OS/axio.git", rev = "f7a2dfe" }
axplat = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
axplat-aarch64-qemu-virt = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
axplat-riscv64-qemu-virt = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
axplat-loongarch64-qemu-virt = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
page_table_entry = { git = "https://github.com/Starry-OS/page_table_multiarch.git", rev = "3f697c8" }
page_table_multiarch = { git = "https://github.com/Starry-OS/page_table_multiarch.git", rev = "3f697c8" }
starry-process = { git = "https://github.com/Starry-OS/starry-process.git", rev = "6327455" }
starry-signal = { git = "https://github.com/Starry-OS/starry-signal.git", rev = "01aa4a0" }
starry-vm = { git = "https://github.com/Starry-OS/starry-vm.git", rev = "e2a50e7" }

[package.metadata.vendor-filter]
platforms = ["riscv64gc-unknown-none-elf", "loongarch64-unknown-none-softfloat"]
all-features = true
