[workspace]
resolver = "2"
members = ["api", "core", "crates/axdriver-dyn"]
exclude = ["arceos", "crates/axdriver_crates"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = [
    "Azure-stars <Azure_stars@126.com>",
    "Yuekai Jia <equation618@gmail.com>",
    "KylinSoft Co., Ltd. <https://www.kylinos.cn/>",
    "朝倉水希 <asakuramizu111@gmail.com>",
    "Mivik <mivikq@gmail.com>",
]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/starry-next"

[workspace.dependencies]
axfeat = { path = "arceos/api/axfeat", features = [
    "alloc-tlsf",
    "fp-simd",
    "ext4",
    "fs",
    "irq",
    "multitask",
    "net",
    "page-alloc-4g",
    "rtc",
    # "sched-fifo",
    "sched-rr",
    "alloc-level-1",
] }

axalloc = { path = "arceos/modules/axalloc" }
axconfig = { path = "arceos/modules/axconfig" }
axdisplay = { path = "arceos/modules/axdisplay" }
axdriver = { path = "arceos/modules/axdriver" }
axfs-ng = { path = "arceos/modules/axfs-ng" }
axhal = { path = "arceos/modules/axhal", features = ["uspace"] }
axinput = { path = "arceos/modules/axinput" }
axlog = { path = "arceos/modules/axlog" }
axmm = { path = "arceos/modules/axmm" }
axnet = { path = "arceos/modules/axnet" }
axruntime = { path = "arceos/modules/axruntime" }
axsync = { path = "arceos/modules/axsync" }
axtask = { path = "arceos/modules/axtask", features = ["task-ext"] }

axdriver-dyn = { path = "crates/axdriver-dyn" }

axbacktrace = "0.1"
axerrno = "0.1"
axfs-ng-vfs = "0.1"
axio = "0.1"
axpoll = "0.1"
bitflags = "2.10"
bytemuck = { version = "1.23", features = ["unsound_ptr_pod_impl"] }
cfg-if = "1.0"
event-listener = { version = "5.4.0", default-features = false }
extern-trait = "0.2"
hashbrown = "0.15.4"
kspin = "0.1"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linkme = "0.3.33"
linux-raw-sys = { version = "0.11", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }
memory_addr = "0.4"
scope-local = "0.1"
slab = { version = "0.4.9", default-features = false }
spin = "0.10"
starry-process = "0.2"
starry-signal = "0.2"
starry-vm = "0.2"

starry-core = { path = "./core" }
starry-api = { path = "./api" }

rdrive = "0.18"

rknpu = { git = "https://github.com/drivercraft/rknpu" }

[package]
name = "starry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
qemu = [
    "axfeat/driver-virtio-blk",
    "axfeat/driver-virtio-net",
    "axfeat/driver-virtio-socket",

    "axfeat/driver-virtio-gpu",
    "axfeat/display",

    "axfeat/driver-virtio-input",
    "axfeat/input",
    # "axdriver/dyn",
    "starry-api/input",

    "axfeat/vsock",
    "starry-api/vsock",

    "axfeat/defplat",

    # auxilary features
    "axfeat/fs-times",
    "starry-api/dev-log",
]

vf2 = ["dep:axplat-riscv64-visionfive2", "axfeat/driver-sdmmc-gpt"]

dyn = ["axfeat/driver-dyn", "dep:axdriver-dyn"]

# Stubs
pci = ["axfeat/bus-pci"]
mmio = ["axfeat/bus-mmio"]

[dependencies]
axdriver.workspace = true
axerrno.workspace = true
axfeat.workspace = true
axfs-ng.workspace = true
axhal.workspace = true
axlog.workspace = true
axruntime.workspace = true
axsync.workspace = true
axtask.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
starry-process.workspace = true
starry-signal.workspace = true

starry-core.workspace = true
starry-api.workspace = true

axdriver-dyn = { workspace = true, optional = true }
rdrive = "0.18"

[dependencies.axplat-riscv64-visionfive2]
git = "https://github.com/Starry-OS/axplat-riscv64-visionfive2.git"
rev = "5056c1d"
features = ["fp-simd", "irq", "rtc"]
optional = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
axplat-aarch64-dyn = {path = "crates/axplat-aarch64-dyn", features = ["irq"]}

[patch.crates-io]
axcpu = { git = "https://github.com/Starry-OS/axcpu.git", rev = "fdbf401" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git", rev = "f1e2bca" }
axfs-ng-vfs = { git = "https://github.com/Starry-OS/axfs-ng-vfs.git", rev = "d6f470f" }
axio = { git = "https://github.com/Starry-OS/axio.git", rev = "ebb0c6b" }
axplat = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
axplat-x86-pc = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
axplat-aarch64-qemu-virt = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
axplat-riscv64-qemu-virt = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
axplat-loongarch64-qemu-virt = { git = "https://github.com/Starry-OS/axplat_crates.git", rev = "243fdc9" }
page_table_entry = { git = "https://github.com/Starry-OS/page_table_multiarch.git", rev = "9df46c8" }
page_table_multiarch = { git = "https://github.com/Starry-OS/page_table_multiarch.git", rev = "9df46c8" }
starry-process = { git = "https://github.com/Starry-OS/starry-process.git", rev = "6327455" }
starry-signal = { git = "https://github.com/Starry-OS/starry-signal.git", rev = "acdb5e9" }
starry-vm = { git = "https://github.com/Starry-OS/starry-vm.git", rev = "4c91a6b" }

[package.metadata.vendor-filter]
platforms = ["riscv64gc-unknown-none-elf", "loongarch64-unknown-none-softfloat"]
all-features = true
