[package]
name = "starry-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat.workspace = true
axbacktrace.workspace = true
axfs-ng.workspace = true
axfs-ng-vfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axsync.workspace = true
axtask.workspace = true
kernel_guard.workspace = true

axconfig.workspace = true
axerrno.workspace = true
axio.workspace = true
bitflags.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
event-listener.workspace = true
extern-trait.workspace = true
futures = { version = "0.3.31", default-features = false }
hashbrown = { workspace = true }
inherit-methods-macro = "0.1.0"
kernel-elf-parser = { git = "https://github.com/Starry-OS/kernel_elf_parser.git", rev = "fdcce74" }
kspin.workspace = true
lazy_static = { workspace = true }
linkme.workspace = true
linux-raw-sys.workspace = true
lock_api = { version = "0.4.13", features = ["arc_lock"] }
memory_addr.workspace = true
ouroboros = { version = "0.18.5", default-features = false }
percpu = "0.2.0"
scope-local.workspace = true
slab.workspace = true
spin.workspace = true
starry-process.workspace = true
starry-signal.workspace = true
starry-vm.workspace = true
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
uluru = "3.1.0"
weak-map = "0.1.1"
xmas-elf = "0.9"
# kprobe = { path = "../../ax-project/kprobe" }
kprobe = { git = "https://github.com/Starry-OS/kprobe" }

[target.'cfg(not(any(target_arch = "aarch64", target_arch = "loongarch64")))'.dependencies]
axmm = { workspace = true, features = ["copy"] }
