[workspace]
resolver = "2"

members = [
    "axdriver_base",
    "axdriver_block",
    "axdriver_net",
    "axdriver_display",
    "axdriver_pci",
    "axdriver_virtio",
    "axdriver_input",
]

[workspace.package]
version = "0.1.2"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/axdriver_crates"
repository = "https://github.com/arceos-org/axdriver_crates"
categories = ["os", "no-std", "hardware-support"]

[workspace.dependencies]
axdriver_base = { path = "axdriver_base" }
axdriver_block = { path = "axdriver_block" }
axdriver_display = { path = "axdriver_display" }
axdriver_input = { path = "axdriver_input" }
axdriver_net = { path = "axdriver_net" }
