[package]
edition = "2024"
name = "axplat-aarch64-dyn"
version = "0.2.0"

[features]
fp-simd = ["axcpu/fp-simd"]
hv = ["somehal/hv", "page_table_entry/arm-el2", "percpu/arm-el2", "axcpu/arm-el2"]
irq = ["axplat/irq"]
smp = ["axplat/smp"]

[dependencies]
aarch64-cpu = "10"
aarch64-cpu-ext = "0.1"


arm-gic-driver = {version = "0.15.3", features = ["rdif"]}
axconfig-macros = "0.2"
axcpu = "0.2"
axplat = "0.2"
fdt-parser = "0.4"
heapless = "0.8"
lazyinit = "0.2"
log = "0.4"
memory_addr = "0.4"
page_table_entry = {version = "0.5"}
paste = "1.0"
percpu = {version = "0.2"}
rdrive = "0.18"
rdif-intc = "0.12"
somehal = {version = "0.4"}
spin = "0.10"
some-serial = "0.2"
# some-serial = {path = "/home/zhourui/opensource/some-serial"}

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"

