[package]
name = "axdriver_base"
edition = "2021"
description = "Common interfaces for all kinds of device drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_base"
keywords = ["arceos", "driver"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
