[package]
name = "axdriver_display"
edition = "2021"
description = "Common traits and types for graphics device drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_display"
keywords = ["arceos", "driver", "gpu", "framebuffer"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
axdriver_base = { workspace = true }
