[package]
name = "axdriver_input"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
axdriver_base = { workspace = true }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
