[package]
name = "axdriver_pci"
edition = "2021"
description = "Structures and functions for PCI bus operations"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_pci"
keywords = ["arceos", "driver", "pci"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
virtio-drivers = "0.7.4"
