[package]
name = "kret-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
kret-common = { path = "../kret-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[features]
default = []
riscv64 = []
x86_64 = []
loongarch64 = []


[build-dependencies]
which = { workspace = true }

[[bin]]
name = "kret"
path = "src/main.rs"
